force-app/main/default/objects/ReferencePrice__c/fields/Applicationduedate__c.field-meta.xml
<CustomField>
    <fullName>Applicationduedate__c</fullName>
    <label>Valid End Date</label>
    <type>Date</type>
</CustomField>