force-app/main/default/objects/ReferencePrice__c/fields/CommodityCategory__c.field-meta.xml
<CustomField>
    <fullName>CommodityCategory__c</fullName>
    <label>Commodity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductCategory</valueSetName>
    </valueSet>
</CustomField>