force-app/main/default/objects/ReferencePrice__c/fields/Commoditydetail__c.field-meta.xml
<CustomField>
    <fullName>Commoditydetail__c</fullName>
    <label>Commodity Detail</label>
    <type>TextArea</type>
</CustomField>