force-app/main/default/objects/ReferencePrice__c/fields/Foodcategory__c.field-meta.xml
<CustomField>
    <fullName>Foodcategory__c</fullName>
    <label>Food Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FoodCategory</valueSetName>
    </valueSet>
</CustomField>