force-app/main/default/objects/ReferencePrice__c/fields/ImportCountry__c.field-meta.xml
<CustomField>
    <fullName>ImportCountry__c</fullName>
    <formula>TEXT( pod__r.Country_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Country</label>
    <type>Text</type>
</CustomField>