force-app/main/default/objects/ReferencePrice__c/fields/MinMarginRate__c.field-meta.xml
<CustomField>
    <fullName>MinMarginRate__c</fullName>
    <label>Min Margin Rate%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>