force-app/main/default/objects/ReferencePrice__c/fields/Routetype__c.field-meta.xml
<CustomField>
    <fullName>Routetype__c</fullName>
    <label>Route Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>