force-app/main/default/objects/ReferencePrice__c/fields/ServiceProviderVender__c.field-meta.xml
<CustomField>
    <fullName>ServiceProviderVender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier/Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference Price</relationshipLabel>
    <relationshipName>Reference_Price_Service</relationshipName>
    <type>Lookup</type>
</CustomField>