force-app/main/default/objects/ReferencePrice__c/fields/TemperatureType__c.field-meta.xml
<CustomField>
    <fullName>TemperatureType__c</fullName>
    <label>Temperature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TemperatureType</valueSetName>
    </valueSet>
</CustomField>