force-app/main/default/objects/ReferencePrice__c/fields/Unitpriceofbuyinglocal__c.field-meta.xml
<CustomField>
    <fullName>Unitpriceofbuyinglocal__c</fullName>
    <label>Unit Price Of Buying (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>