force-app/main/default/objects/ReferencePrice__c/fields/Unitpriceofbuyingusd__c.field-meta.xml
<CustomField>
    <fullName>Unitpriceofbuyingusd__c</fullName>
    <label>Unit Price of Buying (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>